# pytorch-poetry-template

./: pyproject.toml
