[tool.poetry]
name = "pytorch-poetry-template"
version = "0.1.0"
description = ""
authors = ["SamKG <samyak.k.gupta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = [
  {version = "^2.1.1+cu121", source = "pytorch", markers = "sys_platform == 'linux'"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"