[project]
name = "pytorch-uv-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamKG", email = "samyak.k.gupta@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "triton>=3.1.0",
]

[project.scripts]
pytorch-uv-template = "pytorch_uv_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
